--- a/css/styles-Korobka.css
+++ b/css/styles-Korobka.css
@@ -8,12 +8,15 @@ body {
   background-color: #fff;
 }
 
+/* reset */
+
 ul,
 ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+
 h1,
 h2,
 h3,
@@ -27,44 +30,48 @@ p {
 a {
   text-decoration: none;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-.button {
+
+button {
   cursor: pointer;
 }
 
-/* --hiden--*/
 .visually-hidden {
   position: absolute;
+  white-space: nowrap;
   width: 1px;
   height: 1px;
-  margin: -1px;
+  overflow: hidden;
   border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden;
+  clip-path: inset(100%);
+  margin: -1px;
 }
+
 /* common */
+
 .container {
   max-width: 320px;
   padding: 0 16px;
   margin: 0 auto;
 }
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 16px;
   }
 }
+
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
-    padding: 0 16px;
+    padding: 0 15px;
   }
 }
 
@@ -74,6 +81,7 @@ img {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -95,22 +103,24 @@ img {
   color: #4d5ae5;
 }
 
-.header-logo .logo-part {
-  color: #2e2f42;
-}
-
 .header-logo {
   padding: 16px 0;
   display: block;
 }
+
+.header-logo .logo-part {
+  color: #2e2f42;
+}
+
 .burger-btn {
   padding: 0;
   border: none;
   background-color: transparent;
 }
+
 .burger-icon {
   display: block;
-  fill: #2e2f37;
+  fill: #2f2f37;
 }
 
 @media screen and (min-width: 768px) {
@@ -142,27 +152,9 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  /* --underline--*/
-  /* .nav-link::after {
-    content: '';
-    opacity: 0;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .nav-link:hover::after,
-  .nav-link:focus::after,
-  .nav-link.current:after {
-    opacity: 1;
-  } */
 
   .nav-link.current {
     position: relative;
@@ -186,17 +178,20 @@ img {
     font-style: normal;
     display: block;
   }
+
   .contacts-list {
     display: flex;
     flex-direction: column;
     gap: 12px;
   }
+
   .contacts-link {
     display: block;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #434455;
+
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -213,6 +208,7 @@ img {
   .header-logo {
     margin-right: 76px;
   }
+
   .contacts-list {
     flex-direction: row;
     align-items: center;
