--- a/css/styles.css
+++ b/css/styles.css
@@ -675,6 +675,10 @@ input:checked + .privacy-label .checkbox-custom {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.required-color {
+  color: red;
+}
+
 @media (max-width: 767px) {
   .order-main {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
